# jupyter_template

./: Dockerfile  compose.yml  dispose  docker-compose.yml  start  stop
sandbox/: Dockerfile  pyproject.toml  run_sandbox
src/: 20240122_sample.ipynb  common.py
