[project]
name = "jupyter-playground"
version = "0.2.0"
description = "jupyter palyground"
authors = [{name = "Nagisa Sekiguchi", email = "s.nagisa.xyz@gmail.com"}]
# readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jupyterlab-code-formatter>=3.0.2","jupyterlab>=4.3.1","pandas>=2.2.3", "seaborn>=0.13.2","scikit-learn>=1.5.2","networkx>=3.4.2",
    "folium>=0.18.0", "mecab-python3>=1.0.10", "unidic-lite>=1.0.8", "openpyxl>=3.1.5", "ipyleaflet>=0.19.2", "polars (>=1.20.0,<2.0.0)", "pyarrow (>=19.0.0,<20.0.0)"
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
